# rust-cxx

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  add_rust_library.cmake  build.sh  build_arm.sh  clean.sh  main.cpp
rust_part/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
rust_part/src/: lib.rs
src/: lib.rs  main.cpp
