[package]
name = "rust_part_rs"
edition = "2018"
version = "0.1.0"
authors = ["Michał Hanusek <mhanusek@o2.pl>"]
license = "MIT"
description = "The example bindings rust->cpp"
repository = "https://github.com/hanusek/rust-cxx"

[dependencies]
cxx = "1.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde-transcode = "1.1.1"

[build-dependencies]
cxx-build = "1.0"

[lib]
crate-type = ["staticlib"]
